[gd_scene format=3 uid="uid://3erogswmru6e"]

[ext_resource type="Texture2D" uid="uid://825yw4tyq1b" path="res://assets/Purple.png" id="1_h3e3j"]
[ext_resource type="Script" uid="uid://dvs1pdgv3mtn" path="res://scenes/level/level.gd" id="1_nbgty"]
[ext_resource type="TileSet" uid="uid://bjca3yq6onpfw" path="res://resources/sokoban_tile_set.tres" id="3_i166f"]
[ext_resource type="PackedScene" uid="uid://bgbqws5kgntbt" path="res://scenes/player/player.tscn" id="4_qkmgm"]
[ext_resource type="PackedScene" uid="uid://coj5nyer0s3gl" path="res://scenes/game_ui/game_ui.tscn" id="5_hnne4"]

[node name="Level" type="Node2D" unique_id=1616221721]
script = ExtResource("1_nbgty")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=275980144]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" unique_id=1660600782]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h3e3j")
stretch_mode = 1

[node name="TileLayers" type="Node2D" parent="." unique_id=1656642123]

[node name="FloorTiles" type="TileMapLayer" parent="TileLayers" unique_id=339377537]
tile_set = ExtResource("3_i166f")

[node name="WallTiles" type="TileMapLayer" parent="TileLayers" unique_id=2033220315]
tile_set = ExtResource("3_i166f")

[node name="TargetTiles" type="TileMapLayer" parent="TileLayers" unique_id=1730756049]
tile_set = ExtResource("3_i166f")

[node name="BoxTiles" type="TileMapLayer" parent="TileLayers" unique_id=509473873]
tile_set = ExtResource("3_i166f")

[node name="Camera" type="Camera2D" parent="." unique_id=655869266]

[node name="Player" parent="." unique_id=16060871 instance=ExtResource("4_qkmgm")]

[node name="CanvasLayer2" type="CanvasLayer" parent="." unique_id=1693997486]

[node name="GameUI" parent="CanvasLayer2" unique_id=2082422403 instance=ExtResource("5_hnne4")]
